--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,21 @@ section:nth-of-type(odd) {
 }
 
 .project {
+    background: #e3e3e3;
+    padding: 1rem;
+    border-radius: 5px;
     margin-bottom: 1rem;
 }
+
+.project h3 {
+    color: #333;
+}
+
+ul ul {
+    margin-top: 5px;
+    padding-left: 20px;
+}
+
 
 footer {
     background: #333;
