--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background: #333;
+    background: #1760b4;
     color: #fff;
     padding: 1rem 0;
     text-align: center;
